--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Deskripsi</a></li>
+                    <li><a href="deskripsi.html">Deskripsi</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">Aplikasi Kasir</a></li>
                 </ul>
